--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,8 @@
-FROM node:16-alpine
+FROM node:18
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
 COPY . .
+COPY .env.docker .env
 EXPOSE 8080
-CMD ["node", "server.js"]
+CMD node ./data/insertEmployees.js & node server.js
