--- a/server/.env
+++ b/server/.env
@@ -3,5 +3,5 @@ ORIGIN_URL=http://localhost:5173
 DB_NAME=TimeReportDB
 COLLECTION=Employees
 SECRET=myAwsomeSecret
-EXPIRE_TOKEN_TIME=1h
+EXPIRE_TOKEN_TIME=5s
 PORT=8080
