--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,10 @@ services:
       - "8080:8080"
     depends_on:
       - db
-  # clent:
-  #   image: davidsbg11/timereport-client:latest
-  #   ports:
-  #     - "5173:5173"
+  clent:
+    image: davidsbg11/timereport-client:latest
+    ports:
+      - "5173:5173"
 
 volumes:
   mongo_data:
